--- a/mod1.html
+++ b/mod1.html
@@ -33,6 +33,12 @@
     
     <!-- Hero/Jumbotron -->
     <section class="hero">
+        <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequuntur ipsum suscipit molestias id accusantium voluptates dicta fugit hic omnis reprehenderit neque impedit, officia error doloremque delectus velit cum quia.
+            </p>
+        </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
