--- a/mod1.html
+++ b/mod1.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <header>
         <h1>RUN BUDDY</h1>
         <nav>
@@ -70,16 +71,24 @@
 
   <!-- "what we do" section -->
   <section id="what-we-do" class="intro" >
-    <h2 class="section-title primary-border">What We Do</h2>
-    <p>
-        Since they are still preserved in the rocks for us to see, they must have been formed quite recently, that is, geologically speaking. What can explain these striations and their common orientation? Did you ever hear about the Great Ice Age or the Pleistocene Epoch? Less than one million years ago, in fact, some 12,000 years ago, an ice sheet many thousands of feet thick rode over Burke Mountain in a southeastward direction. The many boulders frozen to the underside of the ice sheet tended to scratch the rocks over which they rode. The scratches or striations seen in the park rocks were caused by these attached boulders. The ice sheet also plucked and rounded Burke Mountain into the shape it possesses today.
-    </p>
+    <div class="flex-row">
+         <h2 class="section-title primary-border">What We Do</h2>
+    </div>
+    <div class="flex-row">
+        <p>
+            Since they are still preserved in the rocks for us to see, they must have been formed quite recently, that is, geologically speaking. What can explain these striations and their common orientation? Did you ever hear about the Great Ice Age or the Pleistocene Epoch? Less than one million years ago, in fact, some 12,000 years ago, an ice sheet many thousands of feet thick rode over Burke Mountain in a southeastward direction. The many boulders frozen to the underside of the ice sheet tended to scratch the rocks over which they rode. The scratches or striations seen in the park rocks were caused by these attached boulders. The ice sheet also plucked and rounded Burke Mountain into the shape it possesses today.
+        </p>
+    </div>
   </section>
+
+
 
   <!-- "what you do" section -->
   <section id="what-you-do" class="steps">
-    <h2 class="section-title secondary-border">What You Do</h2>
-    <div>
+    <div class="flex-row">
+        <h2 class="section-title secondary-border">What You Do</h2>
+    </div>
+    <!-- <div>
          <img src="./assets/images/step-1.svg" alt="">
      <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
         <p>You're already here, so why not?</p>
@@ -101,13 +110,64 @@
         <img src="./assets/images/step-4.svg" alt="">
      <h3>Step 4: <span>See Results.</span></h3>
          <p>Bi-weekly checkins with your trainer will keep you focused</p>
+    </div> -->
+    <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-1.svg" alt="">
+            </div>
+            <div class="step-text">
+                <h4>Fill Out the Form Above.</h4>
+                <p>You're already here, so why not?</p>
+            </div>
+        </div>
+    </div>
+    <div class="step">
+        <h3>Step 2.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-2.svg" alt="">
+            </div>
+            <div class="step-text">
+                <h4>Consult with One of Our Trainers.</h4>
+                <p>Are you here to build muscle, lose weight, or just feel good?</p>
+            </div>
+        </div>
+    </div>
+    <div class="step">
+        <h3>Step 3.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-3.svg" alt="">
+            </div>
+            <div class="step-text">
+                <h4>Get Running.</h4>
+                <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+            </div>
+        </div>
+    </div>
+    <div class="step">
+        <h3>Step 4.</h3>
+        <div class="step-info">
+            <div class="step-img">
+                <img src="./assets/images/step-4.svg" alt="">
+            </div>
+            <div class="step-text">
+                <h4>See Results.</h4>
+                <p>Bi-weekly checkins with your trainer will keep you focused</p>
+            </div>
+        </div>
     </div>
   </section>
 
 
+
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
-    <h2 class="section-title primary-border">Meet The Trainers</h2>
+    <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+    </div>
     <article class="trainer">
         <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
         <div class="trainer-bio text-left">
@@ -143,7 +203,9 @@
 
   <!-- "reach out" section -->
   <section id="reach-out" class="contact">
-    <h2 class="section-title secondary-border">Reach Out</h2>
+    <div class="flex-row">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+    </div>
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3171.0723447071055!2d-122.03301974878305!3d37.36446504333273!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb664b6706b81%3A0x88c0a675eb7596d8!2s762%20Sunnyvale%20Saratoga%20Rd%2C%20Sunnyvale%2C%20CA%2094087!5e0!3m2!1sen!2sus!4v1648408997766!5m2!1sen!2sus" 
             style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -184,7 +246,7 @@
      <div>
         <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
          &copy; 2019 Run Buddy, Inc.
-    </div>
+     </div>
           
     </footer>
     
