--- a/mod1.html
+++ b/mod1.html
@@ -164,40 +164,42 @@
 
 
   <!-- "meet the trainers" section -->
-  <section id="your-trainers" class="trainers">
+  <section id="your-trainers">
     <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
     </div>
-    <article class="trainer">
-        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-        <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed/Strength</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, quae magnam doloribus hic aliquam ut, officiis eveniet veritatis nihil vitae, est illum! Non atque modi ex, voluptate accusamus inventore pariatur!
-            </p>
-        </div>
-    </article>
-    <article class="trainer">
-        <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa eius dicta inventore ab excepturi delectus nulla illum aliquam sit aspernatur dolore ratione asperiores dolores, quo earum mollitia cumque. Minima.
-            </p>
-        </div>
-        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill about to start a workout" />
-    </article>
-    <article class="trainer">
-        <img src="./assets/images/trainer-3.jpg" alt="Harry Smith with his signature headband" />
-        <div class="trainer-bio text-left">
-            <h3>Harry "The Headband" Smith</h3>
-            <h4>Strenth</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat excepturi debitis omnis libero dolorum iste blanditiis. Accusamus aut, non alias suscipit, laudantium recusandae dolorem nisi perferendis, eligendi sint sapiente voluptatum.
-            </p>
-        </div>
-    </article>
+    <div class="trainers">
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Arron Stephens</h3>
+                <h4 class="trainer-role">Speed/Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, quae magnam doloribus hic aliquam ut, officiis eveniet veritatis nihil vitae, est illum! Non atque modi ex, voluptate accusamus inventore pariatur!
+                </p>
+            </div>
+        </article>
+        <article class="trainer">
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill about to start a workout" />
+              <div class="trainer-bio">
+                 <h3 class="trainer-name">Joanna Gill</h3>
+                <h4 class="trainer-role">Endurance</h4>
+                 <p>
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum ipsa eius dicta inventore ab excepturi delectus nulla illum aliquam sit aspernatur dolore ratione asperiores dolores, quo earum mollitia cumque. Minima.
+                 </p>
+             </div>
+        </article>
+        <article class="trainer">
+         <img src="./assets/images/trainer-3.jpg" alt="Harry Smith with his signature headband" />
+          <div class="trainer-bio">
+             <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+             <h4 class="trainer-role">Strenth</h4>
+             <p>
+                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat excepturi debitis omnis libero dolorum iste blanditiis. Accusamus aut, non alias suscipit, laudantium recusandae dolorem nisi perferendis, eligendi sint sapiente voluptatum.
+             </p>
+            </div>
+        </article>
+    </div>
   </section>
 
 
