--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-<link rel="stylesheet" href="./assets/css/privacy-style.css">
+    <link rel="stylesheet" href="./assets/css/privacy-style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy - Run Buddy</title>
 </head>
 <body>
     <header>
